# notebook-ci-testing

./: ._config.yml.bak  .buildinfo  .gitignore  CODE_OF_CONDUCT.html  CONTRIBUTING.html  README.html  README.md  REPORTING.html  REPORTING.md  SAMPLE_REPORT.html  USAGE_GUIDE.html  _config.yml  _toc.yml  cached_results-main.json  conf.py  config.json  generate_error_report.py  genindex.html  index.html  index.json  index.rst  intro.html  intro.md  markdown.html  migrate-repository.sh  migration-status.html  migration-status.md  myst.search.json  myst.xref.json  myst.yml  myst.yml.backup  notebook-a11y-matrix.yml  notebook_accessibility_check_matrix.yml  notebooks.miri.coronagraphy.jwpipenb-miri-coron.json  notebooks.miri.imaging-tso.jwpipenb-miri-imaging-tso.json  notebooks.miri.imaging.jwpipenb-miri-imaging.json  notebooks.miri.lrs-slit.jwpipenb-miri-lrs-slit.json  notebooks.miri.lrs-slitless-tso.jwpipenb-miri-lrs-slitless-tso.json  notebooks.miri.mrs.jwpipenb-miri-mrs.json  notebooks.nircam.coronagraphy.jwpipenb-nircam-coronagraphy.json  (+12 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BLANK_ISSUE_TEMPLATE.yml
.github/scripts/: .actrc  .env  add_deprecation_tag.sh  classify_rrn_delivery.sh  deprecae_notebook.py  deprecate_notebook.py  dispatch_rrn_build.sh
.github/workflows/: README.md  (+57 more)
_sources/: REPORTING.md  SAMPLE_REPORT.md  USAGE_GUIDE.md  index.md  migration-status.md
docs/: how_to_move_files_dirs_between_repos_retaining_history.html  notebook_curators_list.html  release_maintainer_guide.md
notebooks/: .gitignore
shared/: notebook_data_dependencies.py
(+325 files in other folders)
